Removed StudyTypeFiler enum. Instead query from database visible study types and apply filtering by type in getting children nodes
BMS-4958